--- a/index.html
+++ b/index.html
@@ -8,17 +8,16 @@
   <body>
     <h1>Hello! This is my weather app!</h1>
     <h2>
-      | Coded by
+      This website was coded by
       <a href="https://github.com/d0nn12" target="_blank"> Donna Strasburg </a>
-      | Code hosted on
+      and is open-sourced on
       <a href="https://github.com/d0nn12/weather-app-final" target="_blank"
         >GitHub</a
       >
-      and website hosted on
+      and hosted on
       <a href="https://my-weather-conditions-app.netlify.app" target="_blank"
         >Netlify.</a
       >
-      |
     </h2>
   </body>
 </html>
