--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Donna's Weather App</title>
   </head>
   <body>
-    <h1>Hello! This is my weather app!</h1>
-    <h2>
+    <header></header>
+    <main></main>
+    <footer>
       This website was coded by
       <a href="https://github.com/d0nn12" target="_blank"> Donna Strasburg </a>
       and is open-sourced on
@@ -18,6 +19,6 @@
       <a href="https://my-weather-conditions-app.netlify.app" target="_blank"
         >Netlify.</a
       >
-    </h2>
+    </footer>
   </body>
 </html>
