--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <title>Donna's Weather App</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <form action="">
+        <input type="search" placeholder="Enter a city..." />
+        <input type="submit" value="Search" />
+      </form>
+    </header>
     <main></main>
     <footer>
       This website was coded by
