--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
   <body>
     <header>
       <form action="">
-        <input type="search" placeholder="Enter a city..." />
+        <input type="search" placeholder="Enter a city..." required />
         <input type="submit" value="Search" />
       </form>
     </header>
-    <main></main>
+    <main>
+      <h1>Paris</h1>
+      <p>
+        Friday 17:41, sunny
+        <br />
+        Humidity: 85%, Wind: 3.13km/h
+      </p>
+    </main>
     <footer>
       This website was coded by
       <a href="https://github.com/d0nn12" target="_blank"> Donna Strasburg </a>
