--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
       </form>
     </header>
     <main>
-      <h1>Paris</h1>
-      <p>
-        Friday 17:41, sunny
-        <br />
-        Humidity: 85%, Wind: 3.13km/h
-      </p>
+      <div>
+        <h1>Paris</h1>
+        <p>
+          Friday 17:41, sunny
+          <br />
+          Humidity: 85%, Wind: 3.13km/h
+        </p>
+      </div>
+      <div>☀️ 88°C</div>
     </main>
     <footer>
       This website was coded by
