added div to app for css editing

--- a/index.html
+++ b/index.html
@@ -4,37 +4,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
     <title>Donna's Weather App</title>
   </head>
   <body>
-    <header>
-      <form action="">
-        <input type="search" placeholder="Enter a city..." required />
-        <input type="submit" value="Search" />
-      </form>
-    </header>
-    <main>
-      <div>
-        <h1>Paris</h1>
-        <p>
-          Friday 17:41, sunny
-          <br />
-          Humidity: 85%, Wind: 3.13km/h
-        </p>
-      </div>
-      <div>☀️ 88°C</div>
-    </main>
-    <footer>
-      This website was coded by
-      <a href="https://github.com/d0nn12" target="_blank"> Donna Strasburg </a>
-      and is open-sourced on
-      <a href="https://github.com/d0nn12/weather-app-final" target="_blank"
-        >GitHub</a
-      >
-      and hosted on
-      <a href="https://my-weather-conditions-app.netlify.app" target="_blank"
-        >Netlify.</a
-      >
-    </footer>
+    <div class="weather-app">
+      <header>
+        <form action="">
+          <input type="search" placeholder="Enter a city..." required />
+          <input type="submit" value="Search" />
+        </form>
+      </header>
+      <main>
+        <div>
+          <h1>Paris</h1>
+          <p>
+            Friday 17:41, sunny
+            <br />
+            Humidity: 85%, Wind: 3.13km/h
+          </p>
+        </div>
+        <div>☀️ 88°C</div>
+      </main>
+      <footer>
+        This website was coded by
+        <a href="https://github.com/d0nn12" target="_blank">
+          Donna Strasburg
+        </a>
+        and is open-sourced on
+        <a href="https://github.com/d0nn12/weather-app-final" target="_blank"
+          >GitHub</a
+        >
+        and hosted on
+        <a href="https://my-weather-conditions-app.netlify.app" target="_blank"
+          >Netlify.</a
+        >
+      </footer>
+    </div>
   </body>
 </html>
