added div to main

--- a/index.html
+++ b/index.html
@@ -25,17 +25,21 @@
           <input type="submit" value="Search" class="search-form-button" />
         </form>
       </header>
+
       <main>
-        <div>
-          <h1>Paris</h1>
-          <p>
-            Friday 17:41, sunny
-            <br />
-            Humidity: 85%, Wind: 3.13km/h
-          </p>
+        <div class="weather-app-data">
+          <div>
+            <h1>Paris</h1>
+            <p>
+              Friday 17:41, sunny
+              <br />
+              Humidity: 85%, Wind: 3.13km/h
+            </p>
+          </div>
+          <div>☀️ 88°C</div>
         </div>
-        <div>☀️ 88°C</div>
       </main>
+
       <footer>
         This website was coded by
         <a href="https://github.com/d0nn12" target="_blank">
