added class to city

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <main>
         <div class="weather-app-data">
           <div>
-            <h1>Paris</h1>
+            <h1 class="city-name">Paris</h1>
             <p>
               Friday 17:41, sunny
               <br />
