updated classes of main

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
       <main>
         <div class="weather-app-data">
           <div>
-            <h1 class="city-name">Paris</h1>
-            <p>
+            <h1 class="weather-app-name">Paris</h1>
+            <p class="weather-app-details">
               Friday 17:41, sunny
               <br />
               Humidity: 85%, Wind: 3.13km/h
             </p>
           </div>
-          <div>☀️ 88°C</div>
+          <div class="weather-app-temperature">☀️ 88°C</div>
         </div>
       </main>
 
