--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <main>
         <div class="weather-app-data">
           <div>
-            <h1 class="weather-app-name">Paris</h1>
+            <h1 class="weather-app-city">Paris</h1>
             <p class="weather-app-details">
               Friday 17:41, sunny
               <br />
