--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p class="weather-app-details">
               Friday 17:41, sunny
               <br />
-              Humidity: 85%, Wind: 3.13km/h
+              Humidity: <strong>85%</strong>, Wind: <strong>3.13km/h</strong>
             </p>
           </div>
           <div class="weather-app-temperature">☀️ 88°C</div>
