--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
               Humidity: <strong>85%</strong>, Wind: <strong>3.13km/h</strong>
             </p>
           </div>
-          <div class="weather-app-temperature">☀️ 88°C</div>
+          <div class="weather-app-temperature-container">
+            <div class="weather-app-icon">☀️</div>
+            <div class="weather-app-temperature">88</div>
+            <div class="Weather-app-unit">°C</div>
+          </div>
         </div>
       </main>
 
