updated class names for temperature units / stylized

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div class="weather-app-temperature-container">
             <div class="weather-app-icon">☀️</div>
             <div class="weather-app-temperature">88</div>
-            <div class="Weather-app-unit">°C</div>
+            <span class="weather-app-unit">°C</span>
           </div>
         </div>
       </main>
