--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
           </div>
           <div class="weather-app-temperature-container">
             <div class="weather-app-icon">☀️</div>
-            <div class="weather-app-temperature">88</div>
-            <span class="weather-app-unit">°C</span>
+            <div class="weather-app-temperature" id="temperature">88</div>
+            <span class="weather-app-unit">°F</span>
           </div>
         </div>
       </main>
