--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
       <main>
         <div class="weather-app-data">
           <div>
-            <h1 class="weather-app-city" id="city">Paris</h1>
+            <h1 class="weather-app-city" id="city"></h1>
             <p class="weather-app-details">
-              Friday 17:41, sunny
+              Friday 17:41, <span id="description"></span>
               <br />
               Humidity: <strong>85%</strong>, Wind: <strong>3.13km/h</strong>
             </p>
           </div>
           <div class="weather-app-temperature-container">
             <div class="weather-app-icon">☀️</div>
-            <div class="weather-app-temperature" id="temperature">88</div>
+            <div class="weather-app-temperature" id="temperature"></div>
             <span class="weather-app-unit">°F</span>
           </div>
         </div>
