axios to humidity / element / wind

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
             <p class="weather-app-details">
               Friday 17:41, <span id="description"></span>
               <br />
-              Humidity: <strong>85%</strong>, Wind: <strong>3.13km/h</strong>
+              Humidity: <strong><span id="humidity"></span>%</strong>, Wind:
+              <strong><span id="wind"></span>mph</strong>
             </p>
           </div>
           <div class="weather-app-temperature-container">
