Injected weather more weather data

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
           <div>
             <h1 class="weather-app-city" id="city"></h1>
             <p class="weather-app-details">
-              Friday 17:41, <span id="description"></span>
+              <span id="time"></span>,<span id="description"> </span>
               <br />
-              Humidity: <strong><span id="humidity"></span>%</strong>, Wind:
-              <strong><span id="wind"></span>mph</strong>
+              Humidity: <strong><span id="humidity"></span></strong>, Wind:
+              <strong><span id="wind"></span></strong>
             </p>
           </div>
           <div class="weather-app-temperature-container">
